# ADHDLOL

./: .replit  immunodeficiencies.txt  main.py  pyproject.toml  replit.nix  requirements.txt  test_converter.py
.streamlit/: config.toml
adhdlearningcompanion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/: main.py
attached_assets/: Pasted-1-Adaptive-Content-Conversion-Text-Adjustments-Dynamic-Formatting-Automatically-adjust-text-de-1741544616767.txt  Pasted-1-Adaptive-Content-Conversion-Text-Adjustments-Dynamic-Formatting-Automatically-adjust-text-de-1741545760662.txt
models/: advanced_ai.py  database.py  text_processor.py
monitoring/: metrics.py
processed_content/: rick_astley_-_never_gonna_give_you_up_(official_music_video)_20250310_213526.json  биологи_создали_мух,_которые_останавливаются_на_красный_свет_20250310_183635.json  кот_шрёдингера_[minutephysics]_20250310_213708.json  кот_шрёдингера_[minutephysics]_20250310_213933.json  кот_шрёдингера_[minutephysics]_20250310_214004.json
processed_videos/: video_20250310_213526.json  video_20250310_213708.json  video_20250310_213933.json  video_20250310_214004.json
styles/: custom.css
tests/: __init__.py  test_advanced_ai.py  test_content_adaptation.py  test_content_processing.py  test_text_processor.py  test_unified.py
utils/: __init__.py  ai_models.py  cache_manager.py  celery_app.py  concept_extractor.py  content_converter.py  content_processor.py  database.py  focus_tools.py  gpu_manager.py  learning_agent.py  license_checker.py  obfuscator.py  personalization.py  progress_tracker.py  question_generator.py  quiz_generator.py  resource_manager.py  result_printer.py  scheduler.py  service_manager.py  session_manager.py  text_processing.py  text_processor.py  user_behavior_analyzer.py  visualization.py
visualizations/: основная_структура.txt
