[project]
name = "adhdlearningcompanion"
version = "0.1.0"
description = "ADHD-friendly learning platform with AI-powered content processing"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.1",
    "assemblyai>=0.37.0",
    "beautifulsoup4>=4.13.3",
    "graphviz>=0.20.3",
    "gtts>=2.5.4",
    "matplotlib>=3.10.1",
    "nltk>=3.8.1",
    "numpy>=1.24.3",
    "openai>=1.65.5",
    "pandas>=2.2.3",
    "pinecone-client>=3.0.0",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "python-pptx>=1.0.2",
    "requests>=2.31.0",
    "yt-dlp>=2023.3.4",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.43.1",
    "scikit-learn>=1.0.2",
    "sentence-transformers>=2.2.2",
    "plotly>=5.13.0",
    "networkx>=3.0",
    "whisper>=1.1.10",
    "opencv-python>=4.7.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "PyMuPDF>=1.21.1",
    "torch>=2.0.0",
    "transformers>=4.27.0",
    "typing-extensions>=4.5.0",
    "urllib3>=2.0.7"
]

[build-system]
requires = ["setuptools>=61.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ADHDLOL*"]
exclude = ["tests*", "templates*", "styles*", "visualizations*", "processed_videos*", "processed_content*", "attached_assets*"]

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0"
]
